Update metadata plugin and codegen classes with new schema